# gendb

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.txt
.devcontainer/: devcontainer.json  setup.sh
.github/instructions/: codegen.instructions.md
cmake/: CodegenTargets.cmake
docs/: compile_time_builder_pattern.md  db_api_codegen.md  db_interface.md  message_format.md
lib/: bits.h  bits_test.cpp  message_base.cpp  message_base.h  message_builder.cpp  message_builder.h  message_format.cpp  message_format.h  message_format_test.cpp  message_patch.h
lib/gendb/: bits.h  bits_test.cpp  bytes.h  index.h  iterator.h  key_codec.h  key_codec_test.cpp  layered_storage.cpp  layered_storage.h  math.h  message_base.cpp  message_base.h  message_builder.cpp  message_builder.h  message_format_test.cpp  message_patch.cpp  message_patch.h  reflection.h  rocksdb_storage_test.cpp  status.h  storage.cpp  storage.h  storage_test.cpp
lib/schemas/: metadata.fbs
tests/: CMakeLists.txt  database_test.cpp  message_class_test.cpp  message_test.cpp  primitive_database_test.cpp
tests/lib/: message_matchers.h  parse_text.cpp  parse_text.h  status_matchers.h
tests/schemas/: account.fbs  config.fbs  db.yaml  messageA.fbs  position.fbs  primitive_db.yaml
